--- a/src/components/logo/Logo.module.css
+++ b/src/components/logo/Logo.module.css
@@ -1,11 +1,11 @@
 .logo {
-    color: #ffffff;
-    font-size: 20px;
-    text-decoration: none;
-    padding: 12px, 0px, 11px, 0px;
-    margin-top: 12px;
-    display:flex;
-    align-items: center;
+  align-items: center;
+  color: #ffffff;
+  display:flex;
+  font-size: 20px;
+  margin-top: 12px;
+  padding: 12px 0px 11px 0px;
+  text-decoration: none;
 }
 
 @media (min-width: 901px){ 
