--- a/src/components/time-form/TimeForm.module.css
+++ b/src/components/time-form/TimeForm.module.css
@@ -1,3 +1,21 @@
 .timeForm {
-    
+    background-color: #f5f8fa;
+    border-color: #e6eaee;
+    width: 100%;
+    height: 422px;
+    padding: 16px; 
+}
+
+.labels {
+    color: #68768c;
+    font-size: 12px;
+    padding: 16px;
+}
+
+.inputs {
+    width: 100%;
+    height: 36px;
+    border-radius: 4px;
+    border: solid 1px #ced0da;
+    background-image: linear-gradient(to top, #f2f4f7, #ffffff);
 }
