Implement hooks and import svgs

--- a/src/components/logo/Logo.module.css
+++ b/src/components/logo/Logo.module.css
@@ -3,7 +3,7 @@
   color: #ffffff;
   display:flex;
   font-size: 20px;
-  margin-top: 12px;
+  font-family: proximanova;
   padding: 12px 0px 11px 0px;
   text-decoration: none;
 }
