--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -4,6 +4,11 @@
         format('woff');
 }
 
+@font-face {
+    font-family: 'belloscript';
+    src: url('/fonts/bello-script/bello-script.ttf')
+        format('truetype');
+}
 
 .layout {
     max-width: '1580px';
@@ -11,7 +16,7 @@
     padding: '80px 16px 0 16px';
 }
 
-@media (min-width: 901px){ 
+@media (min-width: 901px){
     .layout {
         display: flex;
         justify-content: center;
