--- a/src/components/logo/Logo.module.css
+++ b/src/components/logo/Logo.module.css
@@ -2,13 +2,13 @@
   align-items: center;
   color: #ffffff;
   display:flex;
-  font-size: 20px;
-  font-family: proximanova;
+  font-size: 26px;
+  font-family: belloscript;
   padding: 12px 0px 11px 0px;
   text-decoration: none;
 }
 
-@media (min-width: 901px){ 
+@media (min-width: 901px){
   .logo {
     display: none;
   }
