--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -1,24 +1,18 @@
 .navigation {
     align-items: center;
-    display: none;
+    display: flex;
     flex-direction: column;
     justify-content: flex-start;
     padding: 10px;
-    width: 100%;
     font-family: proximanova;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.3s ease-in-out;
 }
 
 .navigationVisible {
-    display: flex;
-}
-    
-@media (min-width: 901px){ 
-    .navigation {
-        display: flex;
-        padding: 10px;
-        align-items: flex-start;
-        flex-direction: row;
-    }
+    opacity: 1;
+    visibility: visible;
 }
 
 .item {
@@ -32,20 +26,24 @@
     padding: 4px 8px;
 }
 
-@media (min-width: 901px){ 
-    .item {
-        margin-top: 0px;
-    }
-}
-
-@media (min-width: 901px){ 
-    .item:first-child {
-        margin-left: 12px;  
-    }
-}
-
 .itemActive {
     background-color: #1166a5;
     border-radius: 4px;
 }
 
+@media (min-width: 901px) {
+    .navigation {
+        display: flex;
+        align-items: flex-start;
+        flex-direction: row;
+        padding: 0;
+        opacity: 1;
+        visibility: visible;
+    }
+    .item {
+        margin-top: 0px;
+    }
+    .item:first-child {
+        margin-left: 0;
+    }
+}
