--- a/src/components/profile-button/ProfileButton.module.css
+++ b/src/components/profile-button/ProfileButton.module.css
@@ -2,17 +2,47 @@
     display: none;
 }
 
-@media (min-width: 901px){ 
-.profilebutton {
-    align-items: flex-start;
-    background-color: #ffffff;
+.humanoidsIcon {
+    height: 10px;
+    padding-left: 5px;
+    width: 75px;
+}
+
+.employeeAvatar {
     border-radius: 50%;
-    display: flex;
-    flex-direction: row;
-    height: 30px;
+    height: 32px;
+    object-fit: cover;
     position: absolute;
-    right: 10px;
-    top: 10px;
-    width: 30px;
+    right: 2px;
+    top: 1px;
+    width: 32px;
 }
+
+.menuDownIcon {
+    padding: 15px 15px 10px 5px;
+
 }
+
+.containerMenuDownEmployeeAvatar {
+    display: none;
+}
+
+@media (min-width: 901px) {
+    .profilebutton {
+        align-items: flex-start;
+        background-color: #ffffff;
+        border-radius: 18px;
+        display: flex;
+        flex-direction: row;
+        height: 36px;
+        position: relative;
+        width: 135px;
+    }
+    .containerMenuDownEmployeeAvatar{
+        align-content: center;
+        display: flex;
+        flex-direction: row;
+    }
+}
+
+
