Build timeform and add timestamps

--- a/src/components/time-entries/TimeEntries.module.css
+++ b/src/components/time-entries/TimeEntries.module.css
@@ -1,15 +1,9 @@
-.TimeEntries {
-  align-content: center;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 67px;
+.timeEntries {
   width: 100%;
 }
 
 @media (min-width: 901px) {
-  .TimeEntries {
+  .timeEntries {
     align-items: center;
     max-width: 1170px;
     width: 100%;
