--- a/src/components/time-entry/TimeEntry.module.css
+++ b/src/components/time-entry/TimeEntry.module.css
@@ -1,23 +1,22 @@
-.TimeEntry {
+.timeEntry {
   align-content: center;
-  border-left-color: #4f88ef;
-  border-left-width: 4px;
   border-radius: 4px;
   border: solid 1px #e6eaee;
+  border-left:  4px solid #4f88ef;
   display:flex;
   font-family: proximanova;
   justify-content: space-between;
   width: 100%;
 }
 
-.Task {
+.client {
   color: #354052;
   font-family: proximanova;
   font-size: 16px;
   padding: 32px 16px;
 }
 
-.TimeStamp {
+.timeStamp {
   color: #354052;
   font-family: proximanova;
   font-size: 16px;
