--- a/src/components/time-entry-form/TimeEntryForm.module.css
+++ b/src/components/time-entry-form/TimeEntryForm.module.css
@@ -14,6 +14,7 @@
   .timeForm {
     align-content: center;
     flex-direction: row;
+    flex-wrap: nowrap;
     max-width: 1170px; 
   }
 }
@@ -103,9 +104,11 @@
   font-size: 14px;
   font-weight: bold;
   height: 36px;
+  width: 100%;
   margin-top: 12px;
   padding-left: 10px;
   padding-right: 10px;
+  box-sizing: border-box;
 }
 
 .inputDate::-webkit-inner-spin-button, 
@@ -125,9 +128,18 @@
   margin-top: 12px; 
   padding-left: 10px;
   padding-right: 10px;
+  width: 100%;
+  box-sizing: border-box;
 }
+
 .inputsTime::-webkit-inner-spin-button{
     display: none;
+}
+
+@media (min-width: 901px) {
+  .inputsTime {
+    width: auto;
+  }
 }
 
 .labelsTime {
@@ -139,9 +151,11 @@
   margin-top: 16px;
   width: calc(50% - 7px);
 }
+
 @media (min-width: 901px) {
   .labelsTime {
     max-width: 64px;
+    margin-left: 13px;
   }
 }
 
@@ -161,7 +175,7 @@ width: 100%;
 
 @media (min-width: 901px) {
   .buttonTimeEntry {
-    margin-left: 213px;
+    margin-left: 150px;
     margin-top: 40px;
     max-width: 90px;
   }
