--- a/src/components/time-entry-heading/TimeEntryHeading.module.css
+++ b/src/components/time-entry-heading/TimeEntryHeading.module.css
@@ -4,13 +4,9 @@
   font-family: proximanova;
   position: relative;
   padding: 40px 0px 30px 0px;
-  /* box-sizing: border-box;
-  margin-bottom: 10px; */
-}
-
-.duration {
-  position: absolute;
-  right: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 @media (min-width: 901px) {
