--- a/src/components/time-entry/TimeEntry.module.css
+++ b/src/components/time-entry/TimeEntry.module.css
@@ -6,7 +6,7 @@
   display:flex;
   font-family: proximanova;
   justify-content: space-between;
-  width: 100%;
+  align-items: center;
 }
 
 .client {
@@ -21,4 +21,12 @@
   font-family: proximanova;
   font-size: 16px;
   padding: 32px 16px;
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+}
+
+.duration {
+  text-align: right;
+  color:#7f8fa4;
 }
