--- a/src/components/time-entry-form/TimeEntryForm.module.css
+++ b/src/components/time-entry-form/TimeEntryForm.module.css
@@ -1,4 +1,4 @@
-.timeForm {
+.timeEntryForm {
   background-color: #f5f8fa;
   border-radius: 4px;
   border: solid 1px #e6eaee;
@@ -67,10 +67,11 @@
   }
 }
 
-.inputClient {
+.inputClientValid {
   background-image: linear-gradient(to top, #f2f4f7, #ffffff);
   border-radius: 4px;
   border: solid 1px #ced0da;
+  box-sizing: border-box;
   color: #354052;
   font-family: proximanova;
   font-size: 14px;
@@ -81,10 +82,15 @@
   width: 100%;
 }
 
-.inputActivity {
+.inputClientInvalid {
+  border: solid 1px #fb6375;
+} 
+
+.inputActivityValid {
   background-image: linear-gradient(to top, #f2f4f7, #ffffff);
   border-radius: 4px;
   border: solid 1px #ced0da;
+  box-sizing: border-box;
   color: #354052;
   font-family: proximanova;
   font-size: 14px;
@@ -94,6 +100,11 @@
   padding-left: 10px;
   width: 100%;
 }
+
+.inputActivityInvalid {
+  border: solid 1px #fb6375;
+} 
+
 
 .inputDate {
   background-image: linear-gradient(to top, #f2f4f7, #ffffff);
@@ -110,6 +121,10 @@
   padding-right: 10px;
   width: 100%;
 }
+
+.inputDate:invalid {
+  border: solid 1px #fb6375;
+} 
 
 .inputDate::-webkit-inner-spin-button, 
 .inputDate::-webkit-calendar-picker-indicator {
@@ -131,6 +146,10 @@
   padding-right: 10px;
   width: 100%;
 }
+
+.inputsTime:invalid {
+  border: solid 1px #fb6375;
+} 
 
 .inputsTime::-webkit-inner-spin-button{
     display: none;
@@ -170,8 +189,17 @@ height: 36px;
 justify-content: center;
 margin-bottom: 25px;
 margin-top: 25px;
+opacity: 1;
+visibility: visible;
 width: 100%;
 }
+
+.buttonTimeEntryInvalid {
+  opacity: 0;
+  transition: 0.3s ease-in-out;
+  visibility: hidden;
+}
+
 
 @media (min-width: 901px) {
   .buttonTimeEntry {
