Refactor and clean excess form hook

--- a/src/components/time-entry-form/TimeEntryForm.module.css
+++ b/src/components/time-entry-form/TimeEntryForm.module.css
@@ -12,7 +12,7 @@
 }
 
 @media (min-width: 901px) {
-  .timeForm {
+  .timeEntryForm {
     align-content: center;
     flex-direction: row;
     flex-wrap: nowrap;
