--- a/src/components/time-entry-form/TimeEntryForm.module.css
+++ b/src/components/time-entry-form/TimeEntryForm.module.css
@@ -197,7 +197,10 @@ width: 100%;
 }
 
 .buttonTimeEntry[disabled] {
-  background-color: red;
+  background-color:#e6eaee;
+  color: #68768c;
+  border-color: #e6eaee;
+
 }
 
 
