--- a/src/components/time-entry/TimeEntry.module.css
+++ b/src/components/time-entry/TimeEntry.module.css
@@ -1,12 +1,12 @@
 .timeEntry {
   align-content: center;
   align-items: center;
-  border: solid 1px #e6eaee;
   border-left:  4px solid #4f88ef;
   border-radius: 4px;
+  border: solid 1px #e6eaee;
   display:flex;
   font-family: proximanova;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .client {
@@ -18,15 +18,50 @@
 
 .timeStamp {
   color: #354052;
-  font-family: proximanova;
-  font-size: 16px;
-  padding: 32px 16px;
   display: flex;
   flex-direction: column;
+  font-family: proximanova;
+  font-size: 16px;
+  margin-left: auto;
+  padding: 32px 16px;
   text-align: right;
 }
 
 .duration {
   text-align: right;
   color:#7f8fa4;
+}
+
+.deleteButton {
+  background-color: #fb6375;
+  border-radius: 4px;
+  color: #ffffff; 
+  display: flex;
+  font-family: ProximaNova;
+  font-size: 14px;
+  font-weight: 600;
+  height: 30px;
+  justify-content: space-between;
+  margin-left: 33px;
+  width: 79px;
+}
+
+@media (min-width: 901px) {
+  .deleteButton {
+    opacity: 0;
+    transition: 0.3s ease-in-out;
+    visibility: hidden;
+  }
+  
+  .timeEntry:hover .deleteButton {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+.iconDelete {
+  background-color: #ffffff;
+  height: 16px;
+  object-fit: contain;
+  width: 16px;
 }
