Add pointer cursors to inputs/buttons and implement code review

--- a/src/components/menu-toggle/MenuToggle.module.css
+++ b/src/components/menu-toggle/MenuToggle.module.css
@@ -2,6 +2,7 @@
     background-color: transparent;
     border: none;
     color: #ffffff;
+    cursor: pointer;
     fill: #ffffff;
     outline: none;
     padding: 10px;
