--- a/src/components/time-entries/TimeEntries.module.css
+++ b/src/components/time-entries/TimeEntries.module.css
@@ -14,6 +14,7 @@
   background-color: #35ac45;
   border-radius: 4px;
   color: #ffffff;
+  cursor: pointer;
   display: flex;
   font-family: proximanova;
   font-size: 14px;
