--- a/src/components/time-entry/TimeEntry.module.css
+++ b/src/components/time-entry/TimeEntry.module.css
@@ -36,6 +36,7 @@
   background-color: #fb6375;
   border-radius: 4px;
   color: #ffffff; 
+  cursor: pointer;
   display: flex;
   font-family: ProximaNova;
   font-size: 14px;
