--- a/src/components/team-members/TeamMembers.module.css
+++ b/src/components/team-members/TeamMembers.module.css
@@ -6,6 +6,55 @@
   }
 }
 
+.headerTeamMembers {
+  display: none;
+}
+
+@media (min-width: 901px) {
+  .headerTeamMembers {
+    align-content: center;
+    display: flex;
+    height: 55px;
+  }
+}
+
+.headerTeamMembersText {
+  color: #354052;
+  display: flex;
+  font-family: proximanova;
+  font-size: 24px;
+  font-weight: regular;
+  margin-right: auto;
+}
+
+.sortTeamMembersSelector {
+  border-radius: 4px;
+  border: solid 1px #ced0da;
+  cursor: pointer;
+  display: flex;
+  font-family: proximanova;
+  font-size: 14px;
+  height: 36px;
+  justify-content: center;
+  margin-left: 10px;
+  width: 120px;
+}
+
+.newHumanoidButtonDesktop {
+  background-color: #35ac45;
+  border-radius: 4px;
+  color: #ffffff;
+  cursor: pointer;
+  display: flex;
+  font-family: proximanova;
+  font-size: 14px;
+  height: 36px;
+  justify-content: center;
+  width: 156px;
+}
+
+
+
 .newHumanoidButton {
   background-color: #35ac45;
   border-radius: 4px;
@@ -16,8 +65,8 @@
   font-size: 14px;
   height: 36px;
   justify-content: center;
-  margin-top: 70px;
   margin-bottom: 15px;
+  margin-top: 70px;
   width: 100%;
 }
 
