--- a/src/components/team-member-form/TeamMemberForm.module.css
+++ b/src/components/team-member-form/TeamMemberForm.module.css
@@ -35,9 +35,9 @@
 
 @media (max-width: 901px) {
   .saveButton {
-    margin-left: 0px;
-    width: 100%;
     margin-bottom: 10px;
+    margin-left: 0;
+    width: 100%;
   }
 }
 
@@ -57,7 +57,7 @@
 
 @media (max-width: 901px) {
   .cancelButton {
-    margin-left: 0px;
+    margin-left: 0;
     width: 100%;
     margin-bottom: 10px;
   }
@@ -80,11 +80,13 @@
 
 .personalDetailsTab {
   align-items: center;
-  border-radius: 4px;
   border: solid 1px #ced0da;
   border-left:  4px solid #4f88ef;
   border-bottom-color:#ffffff;
   border-bottom-width: 1px;
+  border-radius: 4px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
   color: #354052;
   display: flex;
   font-family: proximanova;
@@ -92,12 +94,10 @@
   font-weight: bold;
   height: 48px;
   justify-content: center;
-  width: 200px;
-  z-index: 900;
   position: relative;
   top: 1px;
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
+  width: 200px;
+  z-index: 900;
 }
 
 .form {
@@ -105,7 +105,7 @@
   border: solid 1px #ced0da;
   border-left:  4px solid #4f88ef;
   border-radius: 4px;
-  border-top-left-radius: 0px;
+  border-top-left-radius: 0;
   flex-direction: row;
   margin-bottom: 20px;
   width: 100%;
@@ -119,7 +119,7 @@
 
 .formColumnOne {
   border-right: solid 1px #ced0da;
-  margin: 44px 0px 44px 44px;
+  margin: 44px 0 44px 44px;
   padding-right: 44px;
   width: 100%;
 }
@@ -127,8 +127,8 @@
 @media (max-width: 901px) {
   .formColumnOne {
     border-right: solid 1px #ffffff;
-    margin: 20px 0px 0px 20px;
-    padding-right: 0px;
+    margin: 20px 0 0 20px;
+    padding-right: 0;
   }
 }
 
@@ -155,12 +155,12 @@
 
 @media (max-width: 901px) {
   .labelFirstName {
-    margin-left: 0px;
+    margin-left: 0;
     width: calc(100% - 35px);
   }
 }
 
-.inputFirstNameValid {
+.inputFirstName {
   background-image: linear-gradient(to top, #f2f4f7, #ffffff);
   border-radius: 4px;
   border: solid 1px #ced0da;
@@ -191,13 +191,13 @@
 
 @media (max-width: 901px) {
   .labelLastName {
-    margin-left: 0px;
+    margin-left: 0;
     margin-top: 19px;
     width: calc(100% - 35px);
   }
 }
 
-.inputLastNameValid {
+.inputLastName {
   background-image: linear-gradient(to top, #f2f4f7, #ffffff);
   border-radius: 4px;
   border: solid 1px #ced0da;
@@ -227,12 +227,12 @@
 
 @media (max-width: 901px) {
   .labelEmailAddress {
-    margin-left: 0px;
+    margin-left: 0;
     width: calc(100% - 35px);
   }
 }
 
-.inputEmailAddressValid {
+.inputEmailAddress {
   background-image: linear-gradient(to top, #f2f4f7, #ffffff);
   border-radius: 4px;
   border: solid 1px #ced0da;
@@ -263,12 +263,12 @@
 
 @media (max-width: 901px) {
   .labelBio {
-    margin-left: 0px;
+    margin-left: 0;
     width: calc(100% - 35px);
   }
 }
 
-.inputBioValid {
+.inputBio {
   background-image: linear-gradient(to top, #f2f4f7, #ffffff);
   border-radius: 4px;
   border: solid 1px #ced0da;
@@ -288,14 +288,14 @@
 } 
 
 .formColumnTwo {
-  margin: 44px 0px 44px 44px;
+  margin: 44px 0 44px 44px;
   padding-right: 44px;
   width: 100%;
 }
 
 @media (max-width: 901px) {
   .formColumnTwo {
-    margin: 20px 0px 20px 20px;
+    margin: 20px 0 20px 20px;
     padding-right: 20px;
   }
 }
@@ -311,12 +311,12 @@
 
 @media (max-width: 901px) {
   .labelAddress {
-    margin-left: 0px;
+    margin-left: 0;
     width: calc(100% - 35px);
   }
 }
 
-.inputAddressValid {
+.inputAddress {
   background-image: linear-gradient(to top, #f2f4f7, #ffffff);
   border-radius: 4px;
   border: solid 1px #ced0da;
@@ -359,13 +359,13 @@
 
 @media (max-width: 901px) {
   .labelPostalCode {
-    margin-left: 0px;
+    margin-left: 0;
     width: calc(100% - 35px);
   }
 }
 
 
-.inputPostalCodeValid {
+.inputPostalCode {
   background-image: linear-gradient(to top, #f2f4f7, #ffffff);
   border-radius: 4px;
   border: solid 1px #ced0da;
@@ -397,12 +397,12 @@
 
 @media (max-width: 901px) {
   .labelLocality {
-    margin-left: 0px;
+    margin-left: 0;
     width: calc(100% - 35px);
   }
 }
 
-.inputLocalityValid {
+.inputLocality {
   background-image: linear-gradient(to top, #f2f4f7, #ffffff);
   border-radius: 4px;
   border: solid 1px #ced0da;
@@ -431,12 +431,12 @@
 }
 @media (max-width: 901px) {
   .labelSocialProfiles {
-    margin-left: 0px;
+    margin-left: 0;
     width: calc(100% - 35px);
   }
 }
 
-.inputSocialProfileOneValid {
+.inputSocialProfileOne {
   background-image: linear-gradient(to top, #f2f4f7, #ffffff);
   border-radius: 4px;
   border: solid 1px #ced0da;
@@ -455,7 +455,7 @@
   border: solid 1px #fb6375;
 } 
 
-.inputSocialProfileTwoValid {
+.inputSocialProfileTwo {
   background-image: linear-gradient(to top, #f2f4f7, #ffffff);
   border-radius: 4px;
   border: solid 1px #ced0da;
