--- a/src/components/time-entry-form/TimeEntryForm.module.css
+++ b/src/components/time-entry-form/TimeEntryForm.module.css
@@ -20,6 +20,16 @@
   }
 }
 
+.timeEntryFormHide {
+  display: none;
+}
+
+@media (min-width: 901px) {
+  .timeEntryFormHide {
+  display: flex;
+  }
+}
+
 .labelClient {
   color: #68768c;
   display: block;
