--- a/src/components/client-form/ClientForm.module.css
+++ b/src/components/client-form/ClientForm.module.css
@@ -1,5 +1,6 @@
 .clientForm {
-  display: block;
+  display: flex;
+  flex-direction: column;
 }
 
 .clientFormHide {
@@ -41,6 +42,12 @@
   }
 }
 
+.saveButton[disabled] {
+  background-color:#e6eaee;
+  border-color: #e6eaee;
+  color: #68768c;
+}
+
 .cancelButton {
   background-color: #f5f7f9;
   border-radius: 4px;
@@ -57,9 +64,9 @@
 
 @media (max-width: 901px) {
   .cancelButton {
+    margin-bottom: 10px;
     margin-left: 0;
     width: 100%;
-    margin-bottom: 10px;
   }
 }
 
@@ -126,8 +133,7 @@
 
 @media (max-width: 901px) {
   .formColumnOne {
-    border-right: solid 1px #ffffff;
-    margin: 20px 0 0 20px;
+    margin: 0;
     padding-right: 0;
   }
 }
@@ -139,12 +145,14 @@
   font-family: proximanova;
   font-size: 12px;
   font-weight: bold;
+  margin-top: 19px;
 }
 
 @media (max-width: 901px) {
   .labelName {
-    margin-left: 0;
-    width: calc(100% - 35px);
+    margin-top: 10px;
+    margin-left: 20px;
+    width: 90%;
   }
 }
 
@@ -179,8 +187,9 @@
 
 @media (max-width: 901px) {
   .labelBranch {
-    margin-left: 0;
-    width: calc(100% - 35px);
+    margin-top: 10px;
+    margin-left: 20px;
+    width: 90%;
   }
 }
 
@@ -215,8 +224,9 @@
 
 @media (max-width: 901px) {
   .labelAddress {
-    margin-left: 0;
-    width: calc(100% - 35px);
+    margin-top: 10px;
+    margin-left: 20px;
+    width: 90%;
   }
 }
 
@@ -250,8 +260,9 @@
 
 @media (max-width: 901px) {
   .formColumnTwo {
-    margin: 20px 0 20px 20px;
-    padding-right: 20px;
+    margin: 0;
+    margin-bottom: 20px;
+    padding-right: 0;
   }
 }
 
@@ -279,8 +290,9 @@
 
 @media (max-width: 901px) {
   .labelPostalCode {
-    margin-left: 0;
-    width: calc(100% - 35px);
+    margin-top: 10px;
+    margin-left: 20px;
+    width: 90%;
   }
 }
 
@@ -316,8 +328,9 @@
 
 @media (max-width: 901px) {
   .labelLocality {
-    margin-left: 0;
-    width: calc(100% - 35px);
+    margin-top: 10px;
+    margin-left: 20px;
+    width: 90%;
   }
 }
 
@@ -352,8 +365,9 @@
 
 @media (max-width: 901px) {
   .labelPlaceholderOne {
-    margin-left: 0;
-    width: calc(100% - 35px);
+    margin-top: 10px;
+    margin-left: 20px;
+    width: 90%;
   }
 }
 
@@ -388,8 +402,9 @@
 
 @media (max-width: 901px) {
   .labelPlaceholderTwo {
-    margin-left: 0;
-    width: calc(100% - 35px);
+    margin-top: 10px;
+    margin-left: 20px;
+    width: 90%;
   }
 }
 
