--- a/src/components/menu-toggle/MenuToggle.module.css
+++ b/src/components/menu-toggle/MenuToggle.module.css
@@ -6,7 +6,7 @@
     fill: #ffffff;
     outline: none;
     padding: 10px;
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 8px;
 }
