--- a/src/components/team-member-form/TeamMemberForm.module.css
+++ b/src/components/team-member-form/TeamMemberForm.module.css
@@ -11,7 +11,6 @@
   align-content: center;
   display: flex;
   height: 55px;
-
 }
 
 @media (max-width: 901px) {
@@ -46,8 +45,8 @@
 
 .saveButton[disabled] {
   background-color:#e6eaee;
-  color: #68768c;
   border-color: #e6eaee;
+  color: #68768c;
 }
 
 .cancelButton {
@@ -66,9 +65,9 @@
 
 @media (max-width: 901px) {
   .cancelButton {
+    margin-bottom: 10px;
     margin-left: 0;
     width: 100%;
-    margin-bottom: 10px;
   }
 }
 
@@ -110,11 +109,10 @@
 }
 
 .form {
-  display: flex;
   border: solid 1px #ced0da;
   border-left:  4px solid #4f88ef;
   border-radius: 4px;
-  border-top-left-radius: 0;
+  border-top-left-radius: 0;display: flex;
   flex-direction: row;
   margin-bottom: 20px;
   width: 100%;
@@ -307,8 +305,8 @@
 @media (max-width: 901px) {
   .formColumnTwo {
     margin: 0;
-    padding-right: 0;
     margin-bottom: 20px;
+    padding-right: 0;
   }
 }
 
