--- a/src/components/team-member-form/TeamMemberForm.module.css
+++ b/src/components/team-member-form/TeamMemberForm.module.css
@@ -1,6 +1,5 @@
 .teamMemberForm {
-  display: flex;
-  flex-direction: column;
+  display:block;
 }
 
 .teamMemberFormHide {
@@ -112,7 +111,8 @@
   border: solid 1px #ced0da;
   border-left:  4px solid #4f88ef;
   border-radius: 4px;
-  border-top-left-radius: 0;display: flex;
+  border-top-left-radius: 0;
+  display: flex;
   flex-direction: row;
   margin-bottom: 20px;
   width: 100%;
