Synchronize Time Entry Form client selector with actual clients & fix button styling

--- a/src/components/client-form/ClientForm.module.css
+++ b/src/components/client-form/ClientForm.module.css
@@ -34,6 +34,12 @@
   width: 156px;
 }
 
+.saveButton[disabled] {
+  background-color:#e6eaee;
+  border-color: #e6eaee;
+  color: #68768c;
+}
+
 @media (max-width: 901px) {
   .saveButton {
     margin-bottom: 10px;
