--- a/src/components/clients/Clients.module.css
+++ b/src/components/clients/Clients.module.css
@@ -51,6 +51,7 @@
 
 .newClientButton {
   background-color: #35ac45;
+  border: solid 1px #249533;
   border-radius: 4px;
   color: #ffffff;
   cursor: pointer;
@@ -66,6 +67,7 @@
 @media (min-width: 901px) {
   .newClientButton {
     background-color: #35ac45;
+    border: solid 1px #249533;
     border-radius: 4px;
     color: #ffffff;
     cursor: pointer;
@@ -83,5 +85,6 @@
 }
 .newClientButtonGrey {
   background-color: #acacac;
+  border: solid 1px #acacac;
 }
 
