--- a/src/components/time-entries/TimeEntries.module.css
+++ b/src/components/time-entries/TimeEntries.module.css
@@ -10,6 +10,33 @@
   }
 }
 
+.headerTimeEntries {
+  align-content: center;
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 901px) {
+  .headerTimeEntries {
+    flex-direction: row;
+  }}
+
+.headerTimeEntriesText {
+  display: none;
+}
+
+@media (min-width: 901px) {
+  .headerTimeEntriesText {
+    color: #354052;
+    display: flex;
+    font-family: proximanova;
+    font-size: 24px;
+    font-weight: regular;
+    margin-right: auto;
+    margin-top: 20px;
+  }
+}
+
 .NewTimeEntryButton {
   background-color: #35ac45;
   border-radius: 4px;
@@ -80,7 +107,7 @@
     font-family: proximanova;
     font-size: 14px;
     height: 36px;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-left: auto;
     width: 156px;
   }
