--- a/src/components/team-members/TeamMembers.module.css
+++ b/src/components/team-members/TeamMembers.module.css
@@ -22,14 +22,19 @@
 }
 
 @media (min-width: 901px) {
-.headerTeamMembersText {
-  color: #354052;
-  display: flex;
-  font-family: proximanova;
-  font-size: 24px;
-  font-weight: regular;
-  margin-right: auto;
+  .headerTeamMembersText {
+    color: #354052;
+    display: flex;
+    font-family: proximanova;
+    font-size: 24px;
+    font-weight: regular;
+    margin-right: auto;
+  }
 }
+
+.sortingWrapper {
+  display: flex;
+  flex-direction: row;
 }
 
 .sortTeamMembersSelector {
@@ -42,25 +47,48 @@
   font-size: 14px;
   height: 36px;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  margin-right: 10px;
   padding-left: 10px;
-  width: 100%;
+  width: 80%;
 }
 
 @media (min-width: 901px) {
-.sortTeamMembersSelector {
-  align-items: center;
-  border-radius: 4px;
+  .sortTeamMembersSelector {
+    align-items: center;
+    border-radius: 4px;
+    border: solid 1px #ced0da;
+    color:#7f8fa4;
+    cursor: pointer;
+    display: flex;
+    font-family: proximanova;
+    font-size: 14px;
+    height: 36px;
+    margin-left: 10px;
+    width: 156px;
+  }
+}
+
+.sortDirectionToggle {
   border: solid 1px #ced0da;
+  border-radius: 4px;
   color:#7f8fa4;
   cursor: pointer;
   display: flex;
   font-family: proximanova;
   font-size: 14px;
   height: 36px;
-  margin-left: 10px;
-  width: 156px;
+  justify-content: center;
+  margin-bottom: 10px;
+  width: 20%;
 }
+
+.sortDirectionDescending {
+  display: block;
+}
+
+.sortDirectionAscending {
+  transform: rotate(180deg);
 }
 
 .newHumanoidButtonHeader {
