--- a/src/shared/components/button/Button.module.css
+++ b/src/shared/components/button/Button.module.css
@@ -1,7 +1,6 @@
 .buttonDefaultColor {
   background-color: #35ac45;
   border-radius: 4px;
-  border: solid 1px #249533;
   color: #ffffff;
   cursor: pointer;
   display: flex;
@@ -9,18 +8,18 @@
   font-size: 14px;
   height: 36px;
   justify-content: center;
-  margin-left: 12px;
-  width: 156px;
+  margin-top: 70px;
+  margin-bottom: 10px;
+  width: 100%;
 }
 
-.buttonColorRed {
-  background-color: red;
+.buttonDefaultColor:disabled {
+  background-color: #acacac;
+  cursor: auto;
 }
 
-.buttonColorBlue {
-  background-color: blue;
-}
-
-.buttonColorYellow {
-  background-color: yellow;
+@media (min-width: 901px) {
+  .buttonDefaultColor {
+    display: none;
+  }
 }
